tests/fail-break1.mg
object main {
  event create {
    break; // error: cannot break in outermost block
  }
}
